[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# the name used to 'pip install'.
# all lowercase and use hyphens for a PyPI package name.
name = "py-stats-toolkit-scriptsanddata"
version = "0.1.2"
authors = [
  { name="Scripts and Data" },
]
description = "A personal project for statistical computations, exploring TDD, packaging, and refactoring techniques."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["statistics", "math", "tdd", "python-packaging", "refactoring", "unit-testing", "data-analysis"]

[project.urls]
"Homepage" = "https://github.com/ScriptsAndData/py-stats-toolkit"
"Bug Tracker" = "https://github.com/ScriptsAndData/py-stats-toolkit/issues"
"Repository" = "https://github.com/ScriptsAndData/py-stats-toolkit"

[tool.setuptools.packages]
# informs setuptools where to find the Python package(s).
find = {}

